gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: otel-demo-gateway
  namespace: otel-demo
spec:
  gatewayClassName: eg
  listeners:
    - name: oteldemo
      protocol: HTTP
      port: 80
      hostname: oteldemo.easysolution.work
      allowedRoutes:
        namespaces:
          from: Same
    - name: grafana
      protocol: HTTP
      port: 80
      hostname: grafana-oteldemo.easysolution.work
      allowedRoutes:
        namespaces:
          from: Same
    - name: jaeger
      protocol: HTTP
      port: 80
      hostname: jaeger-oteldemo.easysolution.work
      allowedRoutes:
        namespaces:
          from: Same
    - name: loadgen
      protocol: HTTP
      port: 80
      hostname: loadgen-oteldemo.easysolution.work
      allowedRoutes:
        namespaces:
          from: Same
    - name: flagd
      protocol: HTTP
      port: 80
      hostname: flagd-oteldemo.easysolution.work
      allowedRoutes:
        namespaces:
          from: Same
    - name: argocd
      protocol: HTTP
      port: 80
      hostname: argocd-oteldemo.easysolution.work
      allowedRoutes:
        namespaces:
          from: Same
