gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oteldemo-route
  namespace: otel-demo
spec:
  parentRefs:
    - name: otel-demo-gateway
      sectionName: https-oteldemo
  hostnames:
    - oteldemo.easysolution.work
  rules:
    - backendRefs:
        - name: frontend-proxy
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: otel-demo
spec:
  parentRefs:
    - name: otel-demo-gateway
      sectionName: https-grafana
  hostnames:
    - grafana-oteldemo.easysolution.work
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-route
  namespace: otel-demo
spec:
  parentRefs:
    - name: otel-demo-gateway
      sectionName: https-jaeger
  hostnames:
    - jaeger-oteldemo.easysolution.work
  rules:
    - backendRefs:
        - name: jaeger
          port: 16686
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loadgen-route
  namespace: otel-demo
spec:
  parentRefs:
    - name: otel-demo-gateway
      sectionName: https-loadgen
  hostnames:
    - loadgen-oteldemo.easysolution.work
  rules:
    - backendRefs:
        - name: load-generator
          port: 8089
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flagd-route
  namespace: otel-demo
spec:
  parentRefs:
    - name: otel-demo-gateway
      sectionName: https-flagd
  hostnames:
    - flagd-oteldemo.easysolution.work
  rules:
    - backendRefs:
        - name: flagd
          port: 4000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: otel-demo-gateway
      namespace: otel-demo
      sectionName: https-argocd
  hostnames:
    - argocd-oteldemo.easysolution.work
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
